--- a/index.html
+++ b/index.html
@@ -30,7 +30,11 @@
             </ul>
         </nav>
     </header>
-    <section>Main image</section>
+    <section>
+        <div id="hero-image">
+        </div>
+    </section>
+
     <section>Club Ethos</section>
     <section>Running locations, distance and times</section>
     <footer>Social links here</footer>
