Add zoom effect to hero image

--- a/index.html
+++ b/index.html
@@ -25,14 +25,14 @@
                     <a href="#">Gallery</a>
                 </li>
                 <li> 
-                    <a href="index.html" class="active">Home</a>
+                    <a href="index.html" class="active">Home</a> 
                 </li>
             </ul>
         </nav>
     </header>
-    <section>
-        <div id="hero-image">
-        </div>
+    <section id="hero-outer">
+        <div id="hero-image"></div>
+        <div id="outer-text"></div>
     </section>
 
     <section>Club Ethos</section>
