--- a/index.html
+++ b/index.html
@@ -38,7 +38,13 @@
         </div>
     </section>
 
-    <section>Club Ethos</section>
+    <section id="club-ethos">
+        <h1>Why Running With Us</h1>
+        <div id="left-about">Left</div>
+        <div id="right-about">Right</div>
+        <div id="center-about">Center</div>
+    </section>
+
     <section>Running locations, distance and times</section>
     <footer>Social links here</footer>
 </body>
