--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     </section>
 
     <section id="club-ethos">
-        <h1>Why Running With Us</h1>
+        <h2 id="welcome">Why Love Running With Us?</h2>
 
         <div id="left-about">
             <div class="left-about-heading">
@@ -67,9 +67,12 @@
             </div>
         </div>
 
-
-
-        <div id="center-about">Center</div>
+        <div id="center-about">
+            <div id="circle-container">
+                <div id="circle-cover-bg">
+                </div>
+            </div>
+        </div>
     </section>
 
     <section>Running locations, distance and times</section>
