Add social media icons to footer

--- a/index.html
+++ b/index.html
@@ -113,7 +113,34 @@
     </section>
 
 
-    <footer>Social links here</footer>
+    <footer>
+        <ul>
+            <li>
+                <a href="https://facebook.com" target="_blank" rel="noopener" aria-label="Visit on Facebook page (opens in a new tab)"> 
+                    <i class="fab fa-facebook"></i>
+                </a>
+            </li>
+
+            <li>
+                <a href="https://twitter.com" target="_blank" rel="noopener" aria-label="Visit on twitter page (opens in a new tab)"> 
+                    <i class="fab fa-twitter"></i>
+                </a>
+            </li>
+
+            <li>
+                <a href="https://youtube.com" target="_blank" rel="noopener" aria-label="Visit on twitter page (opens in a new tab)"> 
+                    <i class="fab fa-youtube"></i>
+                </a>
+            </li>
+
+            <li>
+                <a href="https://instagram.com" target="_blank" rel="noopener" aria-label="Visit on twitter page (opens in a new tab)"> 
+                    <i class="fab fa-instagram"></i>
+                </a>
+            </li>
+        </ul>
+
+    </footer>
 
 <!-- font awesome script-->
 <script src="https://kit.fontawesome.com/603bb7863e.js" crossorigin="anonymous"></script>
